fixed overflow bug and some text

--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,7 @@ header {
   max-width: 1450px;
   margin: 0 auto;
   padding: 0 60px;
+  overflow-x: hidden;
 }
 
 .author-block {
